[css-contain] Layout containment abspos and fixed descendants

An element with "contain: layout" should be the containing block
of any absolutely or fixed positioned descendants.

The spec is very clear regarding this
(https://drafts.csswg.org/css-contain/#containment-layout):
"The element acts as a containing block for absolutely positioned
 and fixed positioned descendants."

The patch just adds a new condition to
ComputedStyle::CanContainFixedPositionObjects().

We already had the condition for paint containment before,
so this takes advantage to add WPT tests to verify that case too.

This patch causes that contain-layout-005.html starts to fail,
but that's because of crbug.com/843329.
There are more failing tests related to that bug, so TestExpectations
is modified to reference it.

BUG=785212
TEST=external/wpt/css/css-contain/contain-layout-006.html
TEST=external/wpt/css/css-contain/contain-layout-007.html

Change-Id: I8bb1d637bd7742961a414a5007b8ee8a8d3e66ea
Reviewed-on: https://chromium-review.googlesource.com/1059557
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Manuel Rego Casasnovas <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#559045}
Former-commit-id: bff3225e24a51702b9dd412db44a3144316ff075