third_party/blink/renderer/core/layout/layout_table_box_component.cc
@@ -63,7 +63,7 @@ void LayoutTableBoxComponent::StyleDidChange(StyleDifference diff,
   LayoutBox::StyleDidChange(diff, old_style);
   SetCanContainFixedPositionObjects(
       Style()->CanContainFixedPositionObjects(false) ||
-      ShouldApplyPaintContainment());
+      ShouldApplyPaintContainment() || ShouldApplyLayoutContainment());
 }
 
 }  // namespace blink
