third_party/blink/renderer/core/layout/ng/inline/ng_inline_item.cc
@@ -127,6 +127,8 @@ void NGInlineItem::ComputeBoxProperties() {
           style_->CanContainFixedPositionObjects(false) ||
           ToLayoutBoxModelObject(layout_object_)
               ->ShouldApplyPaintContainment() ||
+          ToLayoutBoxModelObject(layout_object_)
+              ->ShouldApplyLayoutContainment() ||
           CanBeHitTestTargetPseudoNodeStyle(*style_);
     }
     return;
