third_party/blink/renderer/core/style/computed_style.h
@@ -2085,6 +2085,7 @@ class ComputedStyle : public ComputedStyleBase,
   }
   bool CanContainFixedPositionObjects(bool is_document_element) const {
     return HasTransformRelatedProperty() || ContainsPaint() ||
+           ContainsLayout() ||
            // Filter establishes containing block for non-document elements:
            // https://drafts.fxtf.org/filter-effects-1/#FilterProperty
            (!is_document_element && HasFilter());
